--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,25 +52,44 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvTask"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/screen_horizontal_margin"
-        android:layout_marginTop="@dimen/_16sdp"
-        android:layout_marginEnd="@dimen/screen_horizontal_margin"
-        android:background="@drawable/shape_black_rounded"
+        android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/_65sdp"
         android:orientation="vertical"
-        android:overScrollMode="never"
-        android:paddingStart="@dimen/_16sdp"
-        android:paddingEnd="@dimen/_16sdp"
-        android:paddingBottom="@dimen/_16sdp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleBar"
-        tools:itemCount="15"
-        tools:listitem="@layout/item_tasks" />
+        app:layout_constraintTop_toBottomOf="@+id/titleBar">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvTask"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/screen_horizontal_margin"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/screen_horizontal_margin"
+            android:background="@drawable/shape_black_rounded"
+            android:overScrollMode="never"
+            android:paddingStart="@dimen/_16sdp"
+            android:paddingEnd="@dimen/_16sdp"
+            android:paddingBottom="@dimen/_16sdp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="5"
+            tools:listitem="@layout/item_tasks"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/tvNoTask"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/no_task_for_selected_date"
+            android:textColor="@color/titleColor"
+            android:textSize="@dimen/task_list_text_size"
+            android:visibility="gone" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab"
